--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,1 +1,3 @@
-@use "./partials/mixins.scss" as *;
+@use "./partials/variables" as *;
+@use "./partials/mixins" as *;
+@use "./partials/typography" as *;
