--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,3 +1,45 @@
 @use "./partials/variables" as *;
 @use "./partials/mixins" as *;
 @use "./partials/typography" as *;
+
+/*-----------------------All--------------------*/
+
+* {
+  font-family: "AvenirNext LT Pro", sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+}
+
+/*--------------------Header-----------------------*/
+.header {
+  background-color: $bandsite-black;
+  max-width: 100%;
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__logo-wrapper {
+    max-width: 120px;
+    max-height: 20px;
+  }
+
+  &__nav-wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+  &__nav-link-container {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__nav-link {
+    font-size: 10px;
+    font-weight: 400;
+    text-decoration: none;
+    color: $white;
+  }
+}
