--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -18,28 +18,276 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    @include tablet {
+      flex-direction: row;
+      justify-content: flex-start;
+      padding: 16px;
+    }
+  }
+  &__logo-wrapper {
+    @include tablet {
+      padding: 0 36px;
+    }
   }
 
-  &__logo-wrapper {
-    max-width: 120px;
-    max-height: 20px;
+  &__logo {
+    width: 150px;
+    padding-top: 24px;
+    padding-bottom: 16px;
   }
 
   &__nav-wrapper {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
+    @include tablet {
+      justify-content: flex-start;
+    }
   }
   &__nav-link-container {
     width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-decoration: none;
+    @include tablet {
+      justify-content: flex-start;
+      width: auto;
+    }
   }
   &__nav-link {
-    font-size: 10px;
+    font-size: 18px;
     font-weight: 400;
     text-decoration: none;
     color: $white;
+    padding-bottom: 16px;
+    @include tablet {
+      padding-bottom: 0;
+      margin: 0 36px;
+    }
+  }
+}
+
+/* -------------------Hero Section---------------  */
+
+.hero {
+  background-image: url("../assets/Images/hero-bio.jpg");
+  background-size: cover;
+  height: 40vh;
+  @include tablet {
+    height: 90vh;
+    background-size: cover;
+  }
+
+  &__wrapper {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  &__title {
+    font-size: 30px;
+    color: white;
+    font-weight: 600;
+    margin-left: 16px;
+    letter-spacing: 0.7px;
+    @include tablet {
+      margin-left: 36px;
+      font-size: 70px;
+    }
+  }
+}
+
+/*  ----------------------Info Section-----------------    */
+
+.info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  @include tablet {
+    padding: 36px;
+  }
+  &__title {
+    font-size: 28px;
+    font-weight: 600;
+    margin-left: 16px;
+    letter-spacing: 0.7px;
+    margin-top: 24px;
+    margin-bottom: 16px;
+    @include tablet {
+      margin: 0;
+    }
+    &__content-wrapper {
+      @include tablet {
+        padding: 0 800px;
+      }
+    }
+  }
+  &__band-image {
+    max-width: 100%;
+    padding: 16px;
+    @include tablet {
+      padding: 0 56px;
+    }
+  }
+  &__quote {
+    font-size: 20px;
+    font-weight: 600;
+    padding: 16px;
+    @include tablet {
+      padding: 0 56px;
+    }
+  }
+  &__quote-speaker {
+    margin-bottom: 32px;
+    font-weight: 600;
+    padding: 16px;
+    @include tablet {
+      padding: 0 56px;
+    }
+  }
+  &__bio-title {
+    padding-left: 16px;
+    @include tablet {
+      padding: 0 56px;
+    }
+  }
+
+  &__bio-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    @include tablet {
+      flex-direction: row;
+      padding: 0 40px;
+    }
+  }
+
+  &__bio {
+    padding: 16px;
+    width: 100%;
+  }
+}
+
+/*-------------------Photo Gallery-----------------------*/
+
+.photos {
+  &__container {
+  }
+
+  &__title {
+    padding: 16px;
+    @include tablet {
+      padding: 36px;
+    }
+  }
+  &__images-container {
+    display: flex;
+    flex-direction: column;
+    @include tablet {
+      flex-direction: row;
+      flex-wrap: wrap;
+      margin: auto;
+      padding: 36px;
+      gap: 16px;
+      justify-content: space-between;
+    }
+  }
+  &__image {
+    width: 100%;
+    height: auto;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 16px;
+    @include tablet {
+      width: 30%;
+      padding: 0;
+      flex: 1;
+    }
+  }
+}
+
+/*-------------------Footer--------------------*/
+
+.footer {
+  background-color: $bandsite-black;
+  padding: 24px 16px;
+  @include tablet {
+    position: relative;
+  }
+
+  &__headings-container {
+    @include tablet {
+      display: flex;
+      flex-direction: row;
+    }
+  }
+
+  &__title {
+    color: white;
+    font-size: 30px;
+    font-weight: 600;
+    letter-spacing: 0.7px;
+    padding-bottom: 24px;
+    width: auto;
+  }
+  &__socials-container {
+    display: flex;
+    width: 40%;
+    justify-content: space-between;
+    margin-bottom: 24px;
+    @include tablet {
+      margin: 0;
+    }
+  }
+  &__socials-icon {
+    height: 30px;
+  }
+  &__people-container {
+    display: flex;
+    flex-direction: column;
+    @include tablet {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
+  &__people-card {
+    display: flex;
+    flex-direction: column;
+    margin: 24px 0;
+  }
+  &__name {
+    padding-top: 8px;
+  }
+  &__name-text {
+    color: white;
+    font-weight: 600;
+  }
+  &__location {
+    padding: 16px 0;
+    color: white;
+  }
+  &__location-text {
+  }
+  &__email {
+    margin-bottom: 24px;
+  }
+  &__email-text {
+    text-decoration: none;
+    color: white;
+  }
+  &__logo {
+    margin-top: 48px;
+    @include tablet {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+  }
+  &__copyright {
+    color: white;
+    font-weight: 400;
+    font-size: 16px;
+    padding: 16px 0;
   }
 }
