make tablet responsive

--- a/styles/bio.css
+++ b/styles/bio.css
@@ -39,16 +39,16 @@
   flex-direction: column;
   align-items: center;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .header__wrapper {
     flex-direction: row;
     justify-content: flex-start;
-    padding: 16px;
   }
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .header__logo-wrapper {
-    padding: 0 36px;
+    padding-left: 40px;
+    padding-right: 70px;
   }
 }
 .header__logo {
@@ -56,14 +56,21 @@
   padding-top: 24px;
   padding-bottom: 16px;
 }
+@media screen and (min-width: 768px) {
+  .header__logo {
+    width: 120px;
+    padding-top: 16px;
+  }
+}
 .header__nav-wrapper {
   display: flex;
   justify-content: space-around;
   width: 100%;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .header__nav-wrapper {
     justify-content: flex-start;
+    gap: 70px;
   }
 }
 .header__nav-link-container {
@@ -73,11 +80,15 @@
   align-items: center;
   text-decoration: none;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .header__nav-link-container {
+    padding: 30px 0;
     justify-content: flex-start;
     width: auto;
   }
+}
+.header__nav-link-container--active {
+  border-bottom: 4px solid white;
 }
 .header__nav-link {
   font-size: 18px;
@@ -86,11 +97,15 @@
   color: #ffffff;
   padding-bottom: 16px;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .header__nav-link {
+    font-size: 14px;
     padding-bottom: 0;
-    margin: 0 36px;
+    margin: 0;
   }
+}
+.header__nav-link--active {
+  font-weight: 600;
 }
 
 /* -------------------Hero Section---------------  */
@@ -101,11 +116,11 @@
   background-color: rgba(21, 21, 21, 0.447);
   background-blend-mode: saturation;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .hero {
-    height: 70vh;
+    height: 60vh;
     background-size: cover;
-    background-color: rgba(71, 71, 71, 0.635);
+    background-color: rgba(36, 36, 36, 0.432);
     background-blend-mode: saturation;
   }
 }
@@ -121,10 +136,10 @@
   font-weight: 600;
   margin-left: 24px;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .hero__title {
-    margin-left: 52px;
-    font-size: 80px;
+    margin-left: 40px;
+    font-size: 60px;
   }
 }
 
@@ -134,9 +149,9 @@
   flex-direction: column;
   align-items: flex-start;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .info {
-    padding: 52px;
+    padding: 40px;
   }
 }
 .info__title {
@@ -146,15 +161,10 @@
   margin-top: 30px;
   color: #323232;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .info__title {
     margin: 0;
-    font-size: 52px;
-  }
-}
-@media (min-width: 768px) {
-  .info__title__content-wrapper {
-    padding: 0 800px;
+    font-size: 40px;
   }
 }
 .info__band-image-container {
@@ -162,18 +172,19 @@
   justify-content: center;
   padding: 10px 0;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .info__band-image-container {
     padding-top: 8px;
+    padding-bottom: 0;
   }
 }
 .info__band-image {
   width: 100%;
   padding: 24px;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .info__band-image {
-    padding: 0 90px;
+    padding: 0 60px;
     -webkit-clip-path: inset(30px 0);
             clip-path: inset(30px 0);
   }
@@ -184,11 +195,11 @@
   margin: 0 24px;
   line-height: 1.7;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .info__quote {
-    margin: 0 90px;
-    font-size: 30px;
-    font-weight: 700;
+    margin: 0 60px;
+    font-size: 22px;
+    font-weight: 600;
     line-height: 1.5;
     color: #323232;
   }
@@ -200,11 +211,11 @@
   margin: 12px 24px;
   line-height: 1.7;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .info__quote-speaker {
-    margin: 12px 90px;
-    font-weight: 700;
-    font-size: 25px;
+    margin: 12px 60px;
+    font-weight: 600;
+    font-size: 16px;
   }
 }
 .info__bio-title {
@@ -212,11 +223,11 @@
   font-size: 20px;
   font-weight: 600;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .info__bio-title {
-    margin: 70px 90px 12px 90px;
-    font-weight: 700;
-    font-size: 35px;
+    margin: 50px 60px 12px 60px;
+    font-weight: 600;
+    font-size: 22px;
   }
 }
 .info__bio-container {
@@ -225,10 +236,10 @@
   align-items: flex-start;
   margin: 24px;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .info__bio-container {
     flex-direction: row;
-    margin: 0 90px;
+    margin: 0 60px;
     gap: 28px;
   }
 }
@@ -238,11 +249,11 @@
   line-height: 1.5;
   font-size: 18px;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .info__bio {
     line-height: 1.8;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 14px;
   }
 }
 
@@ -255,10 +266,10 @@
   font-size: 35px;
   font-weight: 600;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .photos__title {
-    padding: 80px 52px 0 52px;
-    font-size: 52px;
+    padding: 40px 40px 0 40px;
+    font-size: 40px;
     color: #323232;
   }
 }
@@ -268,13 +279,13 @@
   padding: 24px;
   gap: 24px;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .photos__images-container {
     flex-direction: row;
     flex-wrap: wrap;
     margin: auto;
-    padding: 30px 52px 52px 52px;
-    gap: 34px;
+    padding: 30px 40px 52px 40px;
+    gap: 25px;
     justify-content: space-between;
   }
 }
@@ -282,7 +293,7 @@
   width: 100%;
   height: auto;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .photos__image {
     width: 30%;
     padding: 0;
@@ -295,19 +306,20 @@
   background-color: #323232;
   padding: 24px;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .footer {
     position: relative;
-    padding: 52px;
+    padding: 40px;
   }
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .footer__headings-container {
     display: flex;
     flex-direction: row;
     align-items: center;
     width: 50%;
     justify-content: space-between;
+    align-items: flex-end;
   }
 }
 .footer__title {
@@ -317,9 +329,9 @@
   padding-bottom: 24px;
   width: auto;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .footer__title {
-    font-size: 52px;
+    font-size: 34px;
     padding-bottom: 0;
   }
 }
@@ -329,23 +341,30 @@
   justify-content: space-between;
   margin-bottom: 24px;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .footer__socials-container {
     margin: 0;
+    margin-bottom: 6px;
     width: 30%;
   }
 }
 .footer__socials-icon {
   height: 35px;
 }
+@media screen and (min-width: 768px) {
+  .footer__socials-icon {
+    height: 25px;
+  }
+}
 .footer__people-container {
   display: flex;
   flex-direction: column;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .footer__people-container {
     flex-direction: row;
     justify-content: space-between;
+    margin-top: 30px;
   }
 }
 .footer__people-card {
@@ -361,12 +380,22 @@
   font-weight: 600;
   font-size: 18px;
 }
+@media screen and (min-width: 768px) {
+  .footer__name-text {
+    font-size: 14px;
+  }
+}
 .footer__location {
   padding: 24px 0;
   color: white;
 }
 .footer__location-text {
   font-size: 18px;
+}
+@media screen and (min-width: 768px) {
+  .footer__location-text {
+    font-size: 14px;
+  }
 }
 .footer__email {
   margin-bottom: 24px;
@@ -376,13 +405,19 @@
   color: white;
   font-size: 18px;
 }
+@media screen and (min-width: 768px) {
+  .footer__email-text {
+    font-size: 14px;
+  }
+}
 .footer__logo {
   margin-top: 48px;
   width: 180px;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .footer__logo {
     position: absolute;
+    width: 120px;
     margin-right: 52px;
     top: 0;
     right: 0;
@@ -391,6 +426,6 @@
 .footer__copyright {
   color: white;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 14px;
   padding: 16px 0;
 }/*# sourceMappingURL=bio.css.map */
