--- a/styles/bio.css
+++ b/styles/bio.css
@@ -317,8 +317,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 50%;
-    justify-content: space-between;
+    max-width: 60%;
+    gap: 13%;
     align-items: flex-end;
   }
 }
@@ -337,7 +337,7 @@
 }
 .footer__socials-container {
   display: flex;
-  width: 40%;
+  width: 30%;
   justify-content: space-between;
   margin-bottom: 24px;
 }
@@ -346,6 +346,7 @@
     margin: 0;
     margin-bottom: 6px;
     width: 30%;
+    gap: 40px;
   }
 }
 .footer__socials-icon {
